--- a/composer.json
+++ b/composer.json
@@ -30,15 +30,7 @@
         "illuminate/database": "^10.0|^11.0",
         "illuminate/http": "^10.0|^11.0",
         "illuminate/support": "^10.0|^11.0",
-        "jaybizzle/crawler-detect": "^1.0",
-        "nesbot/carbon": "^2.0"
-    },
-    "require-dev": {
-        "illuminate/config": "^10.0|^11.0",
-        "mockery/mockery": "^1.2.4",
-        "orchestra/testbench": "^4.9.1|^5.9.1|^6.6.1|^7.0.0|^8.0.0",
-        "laravel/legacy-factories": "^1.1|^1.3",
-        "phpunit/phpunit": "^9.3.3"
+        "jaybizzle/crawler-detect": "^1.0"
     },
     "autoload": {
         "psr-4": {
